--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import './index.css';
 		<title>Raffles Institution Programmers</title>
 	</head>
 	<body>
-		<h1>Raffles Institution Programmers</h1>
+		<div class="min-h-screen bg-black">
+			<h1>Raffles Institution Programmers</h1>
+			<p>Coming soon...</p>
+		</div>
 	</body>
 </html>
