--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -3,4 +3,12 @@
 h1 {
   font-family: 'JetBrainsMono Nerd Font';
   font-weight: bold;
+  font-size: 48px;
+  color: white;
+}
+
+p {
+  font-family: 'JetBrainsMono Nerd Font';
+  font-size: 16px;
+  color: white;
 }
