added subtitle and navbar components

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
 import './global.css';
 import Navbar from '../components/navbar.astro';
-import Subtitle from '../components/subtitle.astro';
 ---
 
 <html lang="en">
@@ -10,13 +9,12 @@ import Subtitle from '../components/subtitle.astro';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>RIP | Home</title>
+		<title>RIP | About</title>
 	</head>
 	<body>
 		<Navbar />
 		<div class="min-h-screen bg-black">
-			<h1>Raffles Institution Programmers</h1>
-			<Subtitle text="aka RIP" />
+			<h1>About Us</h1>
 			<p>Coming soon...</p>
 		</div>
 	</body>
