--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -12,3 +12,9 @@ p {
   font-size: 16px;
   color: white;
 }
+
+a {
+  font-family: 'JetBrainsMono Nerd Font';
+  font-size: 16px;
+  color: white;
+}
